# vpoxod

./: .envexample  README.md  pyproject.toml  pytest.ini  requirements.txt
tests/: conftest.py  test_navigation.py  test_tour.py
vpoxod_tests/data/: data_tests.py
vpoxod_tests/model/: app.py
vpoxod_tests/model/pages/: equipment_page.py  left_menu.py  list_tours_page.py  main_menu.py  main_page.py  tour_page.py
vpoxod_tests/utils/: attach.py
